--- a/build.xml
+++ b/build.xml
@@ -83,8 +83,8 @@
         </java>
     </target>
     
-    <target name="runMandel" depends="build" description="run client" >
-        <java classname="client.MandelClient" fork="true">
+    <target name="runFib" depends="build" description="run client" >
+        <java classname="client.FibClient" fork="true">
             <jvmarg value="-Djava.rmi.server.codebase=${client_web_codebase}"/>
             <jvmarg value="-Djava.security.policy=policy.txt"/>
             <arg value="${hostname}"/>
