--- a/build.xml
+++ b/build.xml
@@ -95,7 +95,7 @@
     </target>
 
     <target name="runSalesman" depends="build" description="run client" >
-        <java classname="client.EuclideanTSPClient" fork="true">
+        <java classname="client.TSPClient" fork="true">
             <jvmarg value="-Djava.rmi.server.codebase=${client_web_codebase}"/>
             <jvmarg value="-Djava.security.policy=policy.txt"/>
             <arg value="${hostname}"/>
