--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,17 @@
 <project name="hw2" default="dist" basedir=".">
     <!-- set global properties for this build -->
     <property name="hostname" value="localhost"/>
+    
+    <!-- Computer list -->
+    <property name="computer1" value="blind.cs.ucsb.edu" />
+    <property name="computer2" value="didley.cs.ucsb.edu" />
+    <property name="computer3" value="dizzy.cs.ucsb.edu" />
+    <property name="computer4" value="dorsey.cs.ucsb.edu" />
+    <property name="computer5" value="ella.cs.ucsb.edu" />
+    <property name="computer6" value="joplin.cs.ucsb.edu" />
+    <property name="computer7" value="kenny.cs.ucsb.edu" />
+    <property name="computer8" value="linus.cs.ucsb.edu" />
+    
     <property name="src" location="src"/>
     <property name="build" location="build"/>
     <property name="lib"  value="lib"/>
@@ -37,7 +48,7 @@
         <!-- Copy client's task classes to client's codebase -->
         <mkdir dir="${client_file_codebase}/tasks"/>
         <copy todir="${client_file_codebase}/tasks">
-        <fileset dir="${build}/tasks/"/>
+            <fileset dir="${build}/tasks/"/>
         </copy>
     </target>
   
@@ -71,16 +82,20 @@
             </classpath>
         </java>
     </target>  
-  
-    <target name="runClient" depends="build" description="run client" >
-        <java classname="client.Client" fork="true">
-            <jvmarg value="-Djava.rmi.server.codebase=${client_web_codebase}"/>
-            <jvmarg value="-Djava.security.policy=policy.txt"/>
-            <arg value="${hostname}"/>
-            <classpath>
-                <pathelement location="dist/client.jar"/>
-            </classpath>
-        </java>
+    
+    <target name = "startComputers4" description = "Start Space and 4 Computers">
+        <parallel>
+            <sshexec host="${computer1}" username="${username}" password="${pw}" trust="true" command="ant runComputer"/>
+            <sshexec host="${computer2}" username="${username}" password="${pw}" trust="true" command="ant runComputer"/>
+            <sshexec host="${computer3}" username="${username}" password="${pw}" trust="true" command="ant runComputer"/>
+            <sshexec host="${computer4}" username="${username}" password="${pw}" trust="true" command="ant runComputer"/>
+        </parallel>
+    </target>
+    <target name = "startComputers2" description = "Start Space and 4 Computers">
+        <parallel>
+            <sshexec host="${computer3}" username="${username}" password="${pw}" trust="true" command="ant runComputer"/>
+            <sshexec host="${computer4}" username="${username}" password="${pw}" trust="true" command="ant runComputer"/>
+        </parallel>
     </target>
     
     <target name="runFib" depends="build" description="run client" >
