--- a/build.xml
+++ b/build.xml
@@ -73,6 +73,9 @@
         <java classname="system.Computer" fork="${fork}">
             <jvmarg value="-Djava.rmi.server.codebase=${computer_web_codebase}"/>
             <jvmarg value="-Djava.security.policy=policy.txt"/>
+            <jvmarg value="-XX:+UseLinuxPosixThreadCPUClocks"/>
+            <!--<jvmarg value="-agentpath:/home/ninj0x/netbeans-7.2/profiler/lib/deployed/jdk16/linux/libprofilerinterface.so=/home/ninj0x/netbeans-7.2/profiler/lib,5140"/>-->
+
             <arg value="${hostname}"/>
             <classpath>
                 <pathelement location="dist/computer.jar"/>
